# probably-average-computer-emulator

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
core/: AboveBoard.cpp  AboveBoard.h  CGACard.cpp  CGACard.h  CGAFont.h  CMakeLists.txt  CPU.cpp  CPU.h  FIFO.h  FixedDiskAdapter.cpp  FixedDiskAdapter.h  FloppyController.cpp  FloppyController.h  MemoryBus.cpp  MemoryBus.h  Scancode.h  SerialMouse.cpp  SerialMouse.h  System.cpp  System.h
minsdl/: CMakeLists.txt  DiskIO.cpp  DiskIO.h  Main.cpp
pico-shared/: BIOS.h  CMakeLists.txt  DiskIO.cpp  DiskIO.h  Filesystem.cpp  Storage.cpp  Storage.h  USBHID.cpp  ffconf.h  spi.pio  tusb_config.h
pico2/: CMakeLists.txt  Display.cpp  Display.h  Main.cpp  config.h
pico2/dvhstx/: dvhstx.hpp  dvi.hpp
picoplus2/: CMakeLists.txt  Main.cpp  config.h  psram.c  psram.h
picoplus2/dvhstx/: dvhstx.cpp  dvhstx.hpp  dvi.cpp
picovision/: CMakeLists.txt  Display.cpp  Display.h  Main.cpp  Storage.cpp  config.h  tusb_config.h
test/: CMakeLists.txt  Main.cpp
